# vutbr-fit-waldboost-detector

./: .gitignore  LICENSE.md  README.md
docs/: doxygen.config  doxygen.config.bak
docs/doxygen/: doxygen.conf
docs/html/: annotated.html  classes.html  classwb_1_1_waldboost_detector-members.html  classwb_1_1_waldboost_detector.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  structwb_1_1_detection-members.html  structwb_1_1_detection.html  structwb_1_1_detector_configuration-members.html  structwb_1_1_detector_configuration.html  structwb_1_1_image_info-members.html  structwb_1_1_image_info.html  structwb_1_1_pyramid-members.html  structwb_1_1_pyramid.html  structwb_1_1_stage-members.html  structwb_1_1_stage.html  structwb_1_1_survivor_data-members.html  structwb_1_1_survivor_data.html  wb__detector_8h_source.html  wb__enums_8h_source.html  wb__general_8h_source.html  wb__structures_8h_source.html  wb__waldboostdetector_8h.html  wb__waldboostdetector_8h_source.html
docs/latex/: annotated.tex  (+7 more)
materials/: pouze_pokud_nepujde_pdf_macenauer.doc
msvc/: waldboost-detector.sln  waldboost-detector.vcxproj  waldboost-detector.vcxproj.filters
src/: CMakeLists.txt  general.h  kernels.cu  main.cu  wb_detector.h  wb_enums.h  wb_general.h  wb_simpledetector.cpp  wb_simpledetector.h  wb_structures.h  wb_waldboostdetector.cu  wb_waldboostdetector.h  wbd_config.h.in  wbd_detector.h  wbd_enums.h  wbd_func.cpp  wbd_func.h  wbd_general.h  wbd_gpu.cu  wbd_gpu.cuh  wbd_gpu_detection.cu  wbd_gpu_detection.cuh  wbd_gpu_pyramid.cu  wbd_gpu_pyramid.cuh  wbd_simple.cpp  wbd_simple.h  wbd_structures.h  wbd_waldboostdetector.cu  wbd_waldboostdetector.cuh
tests/: DEBUG_30.bat  dataset_test.bat  dataset_test_csv.bat  debug_log.txt  final_dataset_30.bat  final_profile_30.bat  final_video_test_30.bat  out_video.txt  video_test.bat  video_test_csv.bat  video_test_csv_1080.bat  video_test_csv_simple.bat  video_test_debug.bat
(+238 files in other folders)
